public/css/app.css
/* app css stylesheet */
html, body {
  /*background: #345474 url("../img/grid-pattern.png") -4px -1px;
  color: white;*/
  font-family: "Raleway";
  background: #232832;
  overflow-x: hidden;
}
#page-container {
  /*background: #2E3436 url("../img/grid-pattern.png") -4px -1px;*/
  background: #232832;
  color: #DDD;
}
h1 {
  font-family: "Lobster";
}
.menu {
  list-style: none;
  /*border-bottom: 0.1em solid white;*/
  margin-bottom: 2em;
  padding: 0 0 0.5em;
}

.menu:before {
  content: "[";
}

.menu:after {
  content: "]";
}

.menu > li {
  display: inline;
}

.menu > li:before {
  content: "|";
  padding-right: 0.3em;
  padding-left: 0.3em;
}

.menu > li:nth-child(1):before {
  content: "";
  padding: 0;
}
footer {
  text-align: left;
  color: #FFF;
  font-size: 12px;
  height: 10%;
  line-height: 10px;
  clear: both;
  background: #333;
  position: absolute;
}

